      for reseting the input method context.

2012-02-14  Jihoon Kim

	* add edje_object_part_text_prediction_allow_set/get.
      These APIs can be used to set whether prediction feature is allowed or not.

2012-02-14  Cedric Bail

	* add a way to disable signal broadcasting introduced in edje 1.1.

2012-02-15  Jihoon Kim

	* add edje_object_part_text_input_panel_language_set/get
          edje_object_part_text_input_panel_imdata_set/get
          edje_object_part_text_input_panel_return_key_type_set/get
          edje_object_part_text_input_panel_return_key_disabled_set/get

2012-02-20  WooHyun Jung

        * Change API names from edje_object_markup_filter_callback_{add,del,del_full}.
        to edje_object_text_markup_filter_callback_{add,del,del_full}.

2012-02-24  Jihoon Kim

	* add edje_object_part_text_imf_context_get for getting Ecore_IMF_Context handle in edje text object

2012-02-29  Tom Hacohen (TAsn)

	* Entry: Added edje_object_part_text_user_insert.
	This function inserts text as if the user has inserted it.
	This means it actually registers as a change and etc.

2012-03-06  Mikael Sans (XHeLL)

	* Entry: Added double click and triple click.
	Double click selects a word.
	Triple click selects a line.

2012-03-07  Tom Hacohen (TAsn)

	* Entry: Replaced edje_object_part_text_style_user_set/get 
	with edje_object_part_text_style_user_set/get to correspond to
	textblock's recent changes.

2012-03-07  Cedric Bail

	* Correctly count and propagate preload signal with GROUP.
	* Fix rotation with fixed point.

2012-03-11  Cedric Bail

	* Propagate scale factor to GROUP's part.

2012-03-12  Cedric Bail

	* Make it possible for edje to update size hint automatically.
	* Add min: SOURCE to GROUP's part.

2012-03-30  Jihoon Kim

	* Fix number doesn't insert even though NUM LOCK is locked.

2012-04-16  Carsten Haitzler (The Rasterman)

        * Add EDJE_VERSION_12 define so edc files can #ifdef compile
        right.
