@@ -406,3 +406,9 @@
         * Add EDJE_VERSION_12 define so edc files can #ifdef compile
         right.
 
+2012-04-20  Carsten Haitzler (The Rasterman)
+
+        * To work through a bug in Elementary, add
+        edje_object_part_text_escaped_set() that converts escapes to
+        plain UTF8 if the part is TEXT.
+
